2000-11-02  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    Turn the listening sockets into NON-BLOCKING mode,
	    and once connection is accept(2)ed, turn the communication
	    socket into blocking mode.

	* transports/smtp/getmxrr.c:
	    Randomish bounces seen at  vger.kernel.org  for domains
	    which have non-functional DNS servers (likely due to
	    network failure, or some such.)  Symptom seems to
	    indicate NXDOMAIN DNS query reply status, but the
	    darn thing happens *rarely*...
	    ... I am not sure this change is a smart thing to do,
	    ... and latter on I removed this change.
	    It looks like getting NXDOMAIN is trouble at whatever
	    system happens to be the DNS server, and we are better
	    of when we don't trouble ourselves too much with
	    circumventations at the resolver code for it.

2000-10-31  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c:
	    Move the  notarystatsave()  function call up so that it will
	    always be called for all collected replies.  Formelly there
	    were cases where it didn't get called, which caused somewhat
	    weird looking results when the TA program switched to alternate
	    destination domain.

	* libc/getaddrinfo.c:
	    Disable entirely the AF_LOCAL support.
	    The code in question used tmpnam() which created some complaints
	    from the recent linker/libc at RH 6.2/7.0 hybride system.

	* configure.in, proto/smtpserver.conf(.in):
	    Turns out that "make install" when working in "adjacent
	    directory" setup doesn't pick correctly the smtpserver.conf
	    for the installation.  Returning to generated smtpserver.conf
	    file, although strictly speaking that is not needed.

	* proto/db/dbases.conf, utils/policy-builder.sh.in,
	  proto/newdbprocessor.in:
	    Spotted a few mistakes at the perl scripts of newdbprocessor.
	    With a hindsight -- me stupid...